# blink-sync-brain

./: CLAUDE.md  LICENSE  README.md  cmdline_fixed.txt  config.yaml.example  pyproject.toml  requirements-drive.txt  requirements-processor.txt  requirements.txt
.claude/commands/: commit-push.md
.claude/skills/commit-push/: SKILL.md
configs/: drive.yaml  processor.yaml
docs/api/: README.md
docs/architecture/: README.md
docs/setup/: README.md  blink-app-setup.md  pi-brain-drive-setup.md  pi-quick-reference.md  pi-zero-setup.md
docs/troubleshooting/: README.md
docs/ui/: README.md
scripts/drive/: create-virtual-storage.sh  diagnose_usb_gadget.sh  enable-usb-gadget.sh  install-app.sh  install-deps.sh  install-service.sh  start_server_mode.sh  start_storafe_mode.sh  start_storage_mode.sh  status.sh  usb-gadget.sh
scripts/drive/systemd/: blink-drive-test.service
scripts/processor/: install-app.sh  install-deps.sh  install-service.sh  setup-storage.sh
scripts/systemd/: blink-drive-simple.service  blink-drive-test.service  blink-drive.service  blink-processor.service
src/blink_sync_brain/: __init__.py  main.py
src/blink_sync_brain/common/: __init__.py  storage_manager.py
src/blink_sync_brain/config/: __init__.py  settings.py
src/blink_sync_brain/core/: __init__.py  face_recognition.py  storage_manager.py  usb_gadget.py  video_processor.py
src/blink_sync_brain/drive/: __init__.py  main.py  usb_gadget.py
src/blink_sync_brain/models/: __init__.py  face_data.py  processing_result.py  video_metadata.py
src/blink_sync_brain/processor/: __init__.py  face_recognition.py  main.py  video_processor.py
